# tiny_renderer_rust

./: Cargo.toml  LICENSE  build.rs  index.html
src/: camera.rs  lib.rs  light_shader.wgsl  main.rs  model.rs  model_shader.wgsl  resources.rs  shader.wgsl  texture.rs
