[package]
name = "tiny_renderer_rust"
version = "0.1.15"
edition = "2021"
authors = ["moonseok-choi<moonseoktech@gmail.com"]
license = "MIT/Apache-2.0"
repository = "https://github.com/moonseokchoi-kr/tiny-renderer-rust"

[lib]
crate-type=["cdylib","rlib"]

[dependencies]
image = {version = "0.24.3", default_features = false, features = ["png","jpeg"]}
pollster = "0.2.0"
cfg-if = "1"
# the other regular dependencies...
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
bytemuck = { version = "1.4.1", features = [ "derive" ] }
anyhow = "1.0.58"
cgmath = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}


